Can add new family tree, views for adding connection, updating person, family trees

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="wrapper d-flex align-items-stretch">
+  <app-sidebar></app-sidebar>
+  <div id="content" class="p-5 p-md-4">
+    <h1>Sugupuu</h1>
+    <app-main-sugupuu></app-main-sugupuu>
+  </div>
+</div>
