Alot of new added - 11h 16min spent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="wrapper d-flex align-items-stretch">
+  <app-sidebar></app-sidebar>
+  <div id="content" class="p-5 p-md-4">
+    <router-outlet></router-outlet>
+  </div>
+</div>
