--- a/src/app/components/people-table/people-table.component.html
+++ b/src/app/components/people-table/people-table.component.html
@@ -1,4 +1,4 @@
-<table class="table col-12 table-striped">
+<table class="table col-12 table-striped shadow">
   <thead>
   <tr>
     <td>First name</td>
@@ -14,7 +14,7 @@
     <td>{{p.lastName}}</td>
     <td>{{p.age}}</td>
     <td>{{p.gender}}</td>
-    <td><button style="width: 100%" type="button" class="btn btn-success" id="{{p.id}}">View</button></td>
+    <td><button (click)="selectPerson($event)" style="width: 100%" type="button" class="btn btn-success" id="{{p.id}}">View</button></td>
   </tr>
   </tbody>
 </table>
