--- a/src/app/components/add-connection/add-connection.component.html
+++ b/src/app/components/add-connection/add-connection.component.html
@@ -41,6 +41,9 @@
           id="{{possibleParent.id}}">
           Add {{possibleParent.firstName}} {{possibleParent.lastName}} as parent
         </button>
+        <div class="error" *ngIf="isError">
+          <span class="red">{{errorMessage}}</span>
+        </div>
       </div>
 
     </form>
