--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
       <div class="input-group-prepend ">
         <button (click)="search()"  class="btn btn-outline-secondary" type="button">Search</button>
       </div>
-      <input [(ngModel)]="searchPattern"  type="text" class="form-control" placeholder="First or last name" aria-label="" aria-describedby="basic-addon1">
+      <input [(ngModel)]="searchPattern"  type="text" class="form-control" placeholder="First name" aria-label="" aria-describedby="basic-addon1">
     </div>
   </div>
 
