--- a/src/app/components/update-person/update-person.component.css
+++ b/src/app/components/update-person/update-person.component.css
@@ -26,3 +26,10 @@ form .row {
 .btn {
   font-size: 18px;
 }
+
+.error {
+  padding: 10px;
+  color: red;
+  font-size: 18px;
+  font-weight: 400;
+}
