--- a/src/app/components/update-person/update-person.component.html
+++ b/src/app/components/update-person/update-person.component.html
@@ -30,7 +30,9 @@
       </div>
       <div class="row justify-content-center">
         <button type="submit" class="btn btn-dark border border-light col-12">Update</button>
-
+        <div class="error" *ngIf="isError">
+          <span class="red">{{errorMessage}}</span>
+        </div>
       </div>
     </form>
   </div>
